--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,10 @@ h6 {
   font-family: "Rubik", sans-serif;
   font-weight: 500;
   color: #000000; }
-
+.logo_h{
+  width: 120px; /* Cambia este valor al tamaño deseado */
+  height: auto;
+}
 .list {
   list-style: none;
   margin: 0px;
@@ -383,7 +386,7 @@ button:focus {
               display: none; } }
       .home_banner_area .banner_inner .banner_content h1 {
         margin-top: 20px;
-        font-size: 70px;
+        font-size: 80px;
         line-height: 60px;
         margin-bottom: 25px; }
         @media (max-width: 1024px) {
@@ -2753,7 +2756,9 @@ h6 {
     .testimonial_area .owl-carousel .owl-dots {
       display: none !important; } }
 .testimonial_area .owl-carousel .owl-item img {
-  width: auto !important; }
+  /* width: auto !important; */
+  width: 120px; /* Cambia este valor al tamaño deseado */
+  height: auto; }
 
 .testi_item {
   padding: 50px 55px;
