--- a/css/style.css
+++ b/css/style.css
@@ -3086,7 +3086,12 @@ h6 {
 @media (max-width: 767px) {
   .home_banner_area {
     min-height: 300px; }
+    .d-flex {
+      display: inline-block !important;
+      margin: 0 10px;
 
+      
+    }
   .home_banner_area .banner_inner {
     min-height: 300px;
     padding-top: 200px;
@@ -3097,8 +3102,11 @@ h6 {
     .home_banner_area .banner_inner .banner_content .primary_btn {
       display: flex;
       justify-content: center;
+      margin: 0 10px;
+      margin-bottom: 10px; 
 
-      margin-right: 20px; }
+    }
+
 
   /* Blog Page Area css
   ============================================================================================ */
